# sven

./: README.md  pyproject.toml
examples/: toy_1d_regression.ipynb  toy_1d_regression_jax.ipynb
sven/: __init__.py
sven/jax/: __init__.py  pinv.py  sven.py  wrapper.py
sven/nn/: __init__.py  sven_wrapper.py
sven/opt/: __init__.py  pinv.py  polyak.py  sven.py
